fix: shaking animations caused horizontal overflow

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@ html, body, #root {
 }
 
 body {
+    overflow-x: hidden;
     user-select: none;
 }
 
